# reinforcement_learning

./: README.md  pyproject.toml
env_instance/: GaussianBanditEnv_arm-num=10.pickle
model_instance/: epsilon_greedy.pickle  epsilon_greedy_epsilon=0.01.pickle  epsilon_greedy_epsilon=0.1.pickle
notebooks/: bandit.ipynb
src/: run.py
src/env/: bandit.py
src/experiment/: exp_epsilon_greedy.py  exp_unsteady_bandit.py
src/model/: action_value_method.py
