[tool.poetry]
name = "reinfocement-learning"
version = "0.1.0"
description = ""
authors = ["takutori <t.taichi.takutori.0214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
